# rapic

./: .gitlab-ci.yml  .travis.yml  CMakeLists.txt  CPackOptions.cmake  README.md  demo.cc  description  odim.cc  rainrapic-config-version.cmake.in  rainrapic-config.cmake.in  rainrapic.cc  rainrapic.h  rainrapic.pc.in  rapic-config-version.cmake.in  rapic-config.cmake.in  rapic.cc  rapic.h  rapic.pc.in  rapic_ds-config-version.cmake.in  rapic_ds-config.cmake.in  rapic_ds.cc  rapic_ds.h  rapic_ds.pc.in  rapic_to_odim.cc  unit_tests.cc
